# m1-zomato

./: .env.example  .gitignore  README.md  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements-streamlit.txt  streamlit_app.py
.streamlit/: config.toml
docs/: dataset-contract.md  deployment.md  edge-cases.md  frontend-stitch-prompt.md  phase0-scope.md  phased-architecture.md  problemstatement.md  streamlit-deploy.md
frontend/: .env.local.example  .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: RecommendPage.tsx
frontend/src/lib/: api.ts  types.ts
src/milestone1/: __init__.py  __main__.py  cli.py
src/milestone1/phase0/: __init__.py  commands.py  paths.py  scope.py
src/milestone1/phase1_ingestion/: __init__.py  commands.py  constants.py  convert.py  errors.py  load.py  model.py  normalize.py
src/milestone1/phase2_preferences/: __init__.py  build.py  commands.py  constants.py  errors.py  model.py  parse.py
src/milestone1/phase4_llm/: model.py  (+8 more)
tests/phase0/: test_foundations.py
tests/phase1_ingestion/: test_convert.py  test_integration.py  test_normalize.py
tests/phase2_preferences/: test_build.py  test_parse.py
tests/phase3_integration/: test_filter.py  test_prompt.py
tests/phase4_llm/: test_fallback.py  test_rankings_parse.py  test_recommend.py
tests/phase5_output/: test_empty_copy.py  test_observability.py  test_render.py
tests/phase6_api/: test_app.py
tests/phase8_streamlit/: test_streamlit_shim.py
(+20 files in other folders)
